### 202601-09 Second Commit ### 1. 모바일 검색결과 페이지

--- a/assets/styles/mobile.scss
+++ b/assets/styles/mobile.scss
@@ -33,3 +33,4 @@ body.mobile-body {
 @import "mobile/pages/app-download";
 @import "mobile/pages/join";
 @import "mobile/pages/login";
+@import "mobile/pages/search_result";
