--- a/assets/styles/pc/pages/_main.scss
+++ b/assets/styles/pc/pages/_main.scss
@@ -87,7 +87,7 @@
         text-decoration: none;
         display: flex;
         align-items: center;
-        gap: $space-sm; // 텍스트 간격
+        gap: $space-md; // 텍스트 간격
         font-weight: 600; // SemiBold
 
         // 아이콘 크기화
