--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -1874,6 +1874,14 @@ body.mobile-body {
   border-bottom: 0.5rem solid #f4f4f4;
 }
 
+.qty-box input {
+  height: calc(100% - 0.25rem);
+  border-radius: 0.125rem;
+}
+.qty-box input:focus {
+  outline: 2px solid #444444 !important;
+}
+
 .section-header {
   display: flex;
   justify-content: space-between;
@@ -3411,4 +3419,388 @@ custom-checkbox .custom-checkbox-wrap .label-text {
 }
 .approval-request-page .button-group .btn-action:active {
   opacity: 0.9;
+}
+
+.search-result-page {
+  background-color: #ffffff;
+  padding-bottom: 2.5rem;
+}
+.search-result-page .page-header {
+  padding: 1.5rem 0;
+  text-align: center;
+}
+.search-result-page .page-header .search-result-title {
+  font-size: 1.125rem;
+  font-weight: 600;
+  color: #444444;
+}
+.search-result-page .page-header .search-result-title .keyword {
+  color: #1f95ff;
+}
+.search-result-page .search-top-area {
+  padding: 0 1rem;
+  background-color: #ffffff;
+}
+.search-result-page .search-top-area .total-count-row {
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  border-bottom: 0.0625rem solid #444444;
+  margin-bottom: 1rem;
+  font-size: 0.875rem;
+  color: #444444;
+  letter-spacing: -0.0175rem;
+}
+.search-result-page .search-top-area .total-count-row .count {
+  color: #1f95ff;
+  margin: 0 0.25rem;
+}
+.search-result-page .search-top-area .related-keywords-row {
+  display: flex;
+  align-items: center;
+  height: 2.5rem;
+  margin-bottom: 0.5rem;
+}
+.search-result-page .search-top-area .related-keywords-row .label {
+  font-size: 0.875rem;
+  color: #444444;
+  flex-shrink: 0;
+  margin-right: 0.75rem;
+}
+.search-result-page .search-top-area .related-keywords-row .divider-vertical {
+  width: 0.0625rem;
+  height: 0.75rem;
+  background-color: #eeeeee;
+  margin-right: 0.75rem;
+  flex-shrink: 0;
+}
+.search-result-page .search-top-area .related-keywords-row .keyword-list {
+  display: flex;
+  gap: 0.75rem;
+  overflow-x: auto;
+  white-space: nowrap;
+  flex: 1;
+  -webkit-overflow-scrolling: touch;
+}
+.search-result-page .search-top-area .related-keywords-row .keyword-list::-webkit-scrollbar {
+  display: none;
+}
+.search-result-page .search-top-area .related-keywords-row .keyword-list .keyword-item {
+  font-size: 0.875rem;
+  color: #aaaaaa;
+}
+.search-result-page .search-top-area .filter-options-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.search-result-page .search-top-area .filter-options-row .filter-group {
+  display: flex;
+  align-items: center;
+  height: 2.5rem;
+  flex-shrink: 0;
+}
+.search-result-page .search-top-area .filter-options-row .filter-group .filter-link-link {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+  text-decoration: none;
+}
+.search-result-page .search-top-area .filter-options-row .filter-group .filter-link-link .filter-label {
+  font-size: 0.875rem;
+  color: #444444;
+  white-space: nowrap;
+}
+.search-result-page .search-top-area .filter-options-row .filter-group .filter-link-link .filter-label .text-blue {
+  color: #1f95ff;
+}
+.search-result-page .search-top-area .filter-options-row .filter-group .filter-link-link svg {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+.search-result-page .search-top-area .filter-options-row .filter-group .filter-link-link svg path {
+  fill: #444444;
+}
+.search-result-page .search-top-area .filter-options-row .divider-vertical {
+  width: 0.0625rem;
+  height: 0.75rem;
+  background-color: #eeeeee;
+  margin: 0 0.75rem;
+  flex-shrink: 0;
+}
+.search-result-page .search-top-area .filter-options-row .checkbox-group {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 0.75rem 1rem;
+  margin-left: 0.25rem;
+}
+.search-result-page .search-top-area .filter-options-row .checkbox-group .divider-vertical {
+  width: 100%;
+  height: 0.0625rem;
+  background-color: #eeeeee;
+  margin: 1rem 0;
+  display: block;
+}
+.search-result-page .search-top-area .filter-options-row .checkbox-group custom-checkbox {
+  display: flex;
+  align-items: center;
+  font-size: 0.875rem;
+  color: #aaaaaa;
+}
+.search-result-page .search-top-area .filter-options-row .checkbox-group .hidden-checkbox {
+  display: none;
+}
+.search-result-page .search-top-area .search-control-row {
+  display: flex;
+  align-items: center;
+  height: 2.5rem;
+  margin-top: 0.5rem;
+  padding-bottom: 2rem;
+  border-bottom: 0.0625rem solid #eeeeee;
+}
+.search-result-page .search-top-area .search-control-row .left-col {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 0.75rem;
+}
+.search-result-page .search-top-area .search-control-row .left-col .label {
+  font-size: 0.875rem;
+  color: #444444;
+  flex-shrink: 0;
+  white-space: nowrap;
+}
+.search-result-page .search-top-area .search-control-row .left-col .input-wrap {
+  flex: 1;
+  height: 2.5rem;
+  background-color: #FAFAFA;
+  border-radius: 0.125rem;
+  padding: 0 0.75rem;
+  display: flex;
+  align-items: center;
+}
+.search-result-page .search-top-area .search-control-row .left-col .input-wrap input {
+  width: 100%;
+  border: none;
+  background: transparent;
+  font-size: 0.875rem;
+  color: #444444;
+}
+.search-result-page .search-top-area .search-control-row .left-col .input-wrap input::placeholder {
+  color: #aaaaaa;
+}
+.search-result-page .search-top-area .search-control-row .left-col .input-wrap input:focus {
+  outline: none;
+}
+.search-result-page .search-top-area .search-control-row .left-col .btn-search {
+  width: 3.25rem;
+  height: 2.5rem;
+  border: 0.0625rem solid #444444;
+  background-color: #ffffff;
+  font-size: 0.875rem;
+  color: #444444;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.125rem;
+  flex-shrink: 0;
+}
+.search-result-page .product-control-bar {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+  padding: 1rem 0;
+  border-top: 0.0625rem solid #eeeeee;
+}
+.search-result-page .product-control-bar custom-checkbox {
+  font-size: 0.8125rem;
+  color: #444444;
+}
+.search-result-page .product-control-bar .btn-add-selected {
+  height: 2rem;
+  padding: 0 0.75rem;
+  border: 0.0625rem solid #444444;
+  background-color: #ffffff;
+  font-size: 0.8125rem;
+  font-weight: 600;
+  color: #444444;
+  border-radius: 0.125rem;
+  margin-left: 0.75rem;
+}
+.search-result-page .product-control-bar .right-col {
+  margin-left: auto;
+}
+.search-result-page .product-control-bar .right-col .dropdown-wrapper .select-wrap {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+  height: 2rem;
+  padding: 0 0.75rem;
+  background-color: #FAFAFA;
+  border-radius: 0.125rem;
+}
+.search-result-page .product-control-bar .right-col .dropdown-wrapper .select-wrap .selected-value {
+  font-size: 0.8125rem;
+  font-weight: 600;
+  color: #444444;
+}
+.search-result-page .product-control-bar .right-col .dropdown-wrapper .select-wrap svg {
+  width: 1rem;
+  height: 1rem;
+}
+.search-result-page .product-grid-2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem 0.5rem;
+}
+.search-result-page .product-grid-2 .product-card {
+  width: 100%;
+  position: relative;
+}
+.search-result-page .product-grid-2 .product-card .card-thumb {
+  position: relative;
+  display: block;
+  margin-bottom: 1rem;
+  border-radius: 0.125rem;
+}
+.search-result-page .product-grid-2 .product-card .card-thumb img {
+  width: 100%;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  border-radius: 0.5rem;
+}
+.search-result-page .product-grid-2 .product-card .card-thumb .card-checkbox {
+  position: absolute;
+  top: 0.75rem;
+  right: 0.75rem;
+  z-index: 20;
+}
+.search-result-page .product-grid-2 .product-card .card-thumb .status-overlay {
+  display: none;
+}
+.search-result-page .product-grid-2 .product-card .badge-bar {
+  display: flex;
+  gap: 0.25rem;
+  margin-bottom: 0.5rem;
+  flex-wrap: wrap;
+}
+.search-result-page .product-grid-2 .product-card .badge-bar .badge {
+  font-size: 0.6875rem;
+  padding: 0.25rem 0.375rem;
+  border-radius: 0.25rem;
+}
+.search-result-page .product-grid-2 .product-card .product-name {
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: #222222;
+  margin-bottom: 0.25rem;
+  line-height: 1.4;
+  height: auto;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.search-result-page .product-grid-2 .product-card .price-info .original {
+  display: inline-block;
+}
+.search-result-page .product-grid-2 .product-card.state-dimmed a {
+  cursor: default;
+}
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-thumb::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 10;
+  border-radius: 0.25rem;
+}
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-thumb .status-overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2.5rem;
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 15;
+  width: 76%;
+  color: #ffffff;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-thumb .status-overlay .btn-substitute {
+  flex: 1;
+  min-height: 3rem;
+  width: 100%;
+  background-color: #ffffff;
+  border: 1.5px solid #444444;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  color: #444444;
+  cursor: pointer;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.2s ease;
+}
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-thumb .status-overlay .btn-substitute:hover {
+  background-color: #eeeeee;
+  border-color: #999999;
+}
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-info * {
+  color: #aaaaaa !important;
+}
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-info .product-name,
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-info .price,
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-info .discount,
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-info .unit-highlight,
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-info .unit-desc,
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-info .unit-info span {
+  color: #aaaaaa !important;
+}
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-control {
+  display: flex;
+  gap: 0.25rem;
+}
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-control.sold-out *:disabled,
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-control.sold-out .qty-box {
+  cursor: default;
+  background: #f4f4f4;
+}
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-control.sold-out *:disabled.btn-icon:hover,
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-control.sold-out .qty-box.btn-icon:hover {
+  border-color: #cccccc;
+}
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-control.sold-out input,
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-control.sold-out svg:not(.icon-heart) {
+  color: #aaaaaa;
+  pointer-events: none;
+}
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-control.sold-out input:focus,
+.search-result-page .product-grid-2 .product-card.state-dimmed .card-control.sold-out svg:not(.icon-heart):focus {
+  outline: none;
+}
+.search-result-page .more-container {
+  margin-top: 2rem;
+}
+.search-result-page .more-container .btn-more {
+  width: 100%;
+  height: 2.5rem;
+  border: 0.0625rem solid #444444;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.25rem;
+  font-size: 0.875rem;
+  font-weight: 600;
+  color: #444444;
+  border-radius: 0.125rem;
 }
