--- a/assets/styles/pc/pages/_mypage.scss
+++ b/assets/styles/pc/pages/_mypage.scss
@@ -28,6 +28,7 @@
                     display: flex;
                     align-items: center;
                     gap: rem(8);
+                    @include btn-hover-effect;
                 }
             }
         }
@@ -1003,6 +1004,7 @@
                     color: $gray-700;
                     cursor: pointer;
                     transition: background-color 0.2s ease;
+                    @include btn-hover-effect;
 
                     svg {
                         flex-shrink: 0;
