--- a/assets/styles/pc/pages/_mypage.scss
+++ b/assets/styles/pc/pages/_mypage.scss
@@ -1039,7 +1039,7 @@
             th {
                 background: $gray-20;
                 font-size: rem(16);
-                color: $gray-600; // $gray-700 -> $gray-600
+                color: $gray-700;
                 text-align: center;
                 padding: rem(20);
                 border-bottom: rem(1.5) solid $gray-100;
