--- a/assets/styles/mobile/components/_cards.scss
+++ b/assets/styles/mobile/components/_cards.scss
@@ -94,6 +94,12 @@
             // height: rem(34);
             justify-content: center;
 
+            .price-wrap {
+                display: flex;
+                align-items: center;
+                gap: rem(4);
+            }
+
             .strike {
                 color: $gray-300;
                 text-decoration: line-through;
@@ -137,7 +143,7 @@
         .btn-icon {
             width: rem(32);
             height: rem(32);
-            border: 1px solid $gray-700;
+            border: 1px solid $gray-200;
             border-radius: rem(2);
             display: flex;
             align-items: center;
